@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-08T08:10:15Z",
+  "timestamp" : "2022-08-09T16:07:59Z",
   "count_outdated" : 42,
   "uniques_outdated" : 12,
-  "count" : 45,
-  "uniques" : 15,
+  "count" : 46,
+  "uniques" : 16,
   "views" : [
     {
       "timestamp": "2022-07-27T00:00:00Z",
@@ -21,6 +21,13 @@
     },
     {
       "timestamp": "2022-08-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
