@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-07-27T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2022-08-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
